fix color css on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -90,9 +90,11 @@ body {
 
 .color {
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  bottom: 0;
+  right: 0;
+  padding: 10px;
   font-size: 12px;
+  text-align: right;
 }
 
 a {
